# contango

./: .gitignore  README.md  d.py  pyproject.toml
perp/: amm.py  caching.py  constants.py  env.py  settings.py  simulated_asset.py  simulation_env.py  utils.py
scripts/: fetch.py  fetch_coinglass.py  fetch_graph.py  fetch_kaiko.py  fetch_kaiko_exchange.py  fetch_kaiko_time_block.py  fetch_router.py  fetch_uniswap.py  play.py  plot.py  plot_apys.py  plot_health.py  plot_leverage.py  plot_products.py  plot_slippage.py  process_coinglass.py  process_graph.py  process_kaiko.py  process_router.py  process_uniswap.py  simluate.py  tabulate.py  tabulate_corr.py  tabulate_desc.py  tabulate_slippage.py  test_app.py
scripts/deprecated/: fetch.py
scripts/plot/: plot_funding_fee.py  plot_price_paths.py  plot_sim.py
tables/: corr_AAVE.tex  corr_BTC.tex  corr_CRV.tex  corr_ETH.tex  corr_LINK.tex  corr_MKR.tex  corr_SNX.tex  corr_UNI.tex  funding_rates_AAVE.tex  funding_rates_BTC.tex  funding_rates_CRV.tex  funding_rates_ETH.tex  funding_rates_LINK.tex  funding_rates_MKR.tex  funding_rates_SNX.tex  funding_rates_UNI.tex  slippage.tex  slippage1696003200.tex  slippage1697299200.tex  slippage1698595200.tex
